receive wireless device data
